# ExplorerScript

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  ExternalAntlr4Cpp.cmake  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  README.rst  _test.py  _unionall.exps  generate_parser_bindings.py  mypy.ini  pyproject.toml  requirements-docs.txt  requirements.txt  riptide.yml  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: language-feature-idea.md
.github/workflows/: build-test-publish.yml
docs/: cli_api_usage.rst  conf.py  index.rst  language_spec.rst  requirements.txt  source_maps.rst
example/: example_compile.py
example/SCRIPT/: base.exps
example/macros/dir/: macros1.exps  macros2.exps
explorerscript/: __init__.py  common_syntax.py  error.py  explorerscript_reader.py  included_usage_map.py  macro.py  parse_error.py  source_map.py  source_map_visualizer.py  syntax_error_listener.py  util.py
explorerscript/antlr/: ExplorerScript.g4  ExplorerScript.interp  ExplorerScript.tokens  ExplorerScriptLexer.interp  ExplorerScriptLexer.py  ExplorerScriptLexer.tokens  ExplorerScriptListener.py  ExplorerScriptParser.py  ExplorerScriptVisitor.py  SsbCommon.g4  SsbScript.g4  SsbScript.interp  SsbScript.tokens  SsbScriptLexer.interp  SsbScriptLexer.py  SsbScriptLexer.tokens  SsbScriptListener.py  SsbScriptParser.py  __init__.py
explorerscript/cli/: __init__.py  compile.py  decompile.py
explorerscript/pygments/: __init__.py  expslexer.py
explorerscript/ssb_converting/: ssb_compiler.py  ssb_data_types.py  ssb_decompiler.py  ssb_special_ops.py  util.py
explorerscript/ssb_converting/compiler/: __init__.py  compiler_listener.py  compiler_visitor.py  label_finalizer.py  label_jump_to_remover.py  meta_attributes.py  utils.py
explorerscript/ssb_converting/compiler/compile_handlers/: abstract.py  null.py
explorerscript/ssb_converting/compiler/compile_handlers/assignments/: __init__.py  assignment_adventure_log.py  assignment_clear.py  assignment_dungeon_mode.py  assignment_initial.py  assignment_regular.py  assignment_reset.py  assignment_scenario.py
explorerscript/ssb_converting/compiler/compile_handlers/atoms/: assignment_operator.py  conditional_operator.py  integer_like.py  label.py  lang_string.py  lang_string_arg.py  position_marker.py  position_marker_arg.py  primitive.py  scn_var.py  string.py  value_of.py
explorerscript/ssb_converting/compiler/compile_handlers/functions/: coro_def.py  for_target_def.py  macro_def.py  simple_def.py
explorerscript/ssb_converting/compiler/compile_handlers/operations/: arg.py  arg_list.py  macro_call.py  operation.py
explorerscript/ssb_converting/compiler/compile_handlers/statements/: call.py  control_statement.py  jump.py
explorerscript/ssb_converting/compiler/compiler_visitor/: has_routines_visitor.py  import_visitor.py  macro_resolution_order.py  macro_visitor.py  position_mark_visitor.py  routine_visitor.py  statement_visitor.py  user_constants_visitor.py
explorerscript/ssb_converting/decompiler/: graph_minimizer.py  graph_utils.py  label_jump_to_resolver.py  write_handler_manager.py
explorerscript/ssb_converting/decompiler/graph_building/: graph_control_flow_builder.py  graph_minimizer.py  graph_utils.py
explorerscript/ssb_converting/decompiler/write_handlers/: __init__.py  abstract.py  block.py  foreign_label.py  label.py  label_jump.py  routine.py  simple_op.py
explorerscript/ssb_converting/decompiler/write_handlers/label_jumps/: call.py  forever_break.py  forever_continue.py  if_start.py  jump.py  switch_start.py
explorerscript/ssb_converting/decompiler/write_handlers/labels/: __init__.py  forever_start.py
explorerscript/ssb_converting/decompiler/write_handlers/simple_ops/: ctx.py  flag.py  keyword.py  message_switches.py  message_switches_cases.py  simple.py
explorerscript/ssb_script/: README.rst
explorerscript/ssb_script/antlr/: SsbScript.g4  SsbScript.interp  SsbScript.tokens  SsbScriptLexer.interp  SsbScriptLexer.py  SsbScriptLexer.tokens  SsbScriptListener.py  SsbScriptParser.py
explorerscript/ssb_script/ssb_converting/: compiler_listener.py  ssb_compiler.py  ssb_decompiler.py
explorerscript/ssb_script/ssb_converting/compiler/: compiler_listener.py  compiler_visitor.py
explorerscript_parser/: ExplorerScript.g4  ExplorerScriptBaseListener.cpp  ExplorerScriptBaseListener.h  ExplorerScriptBaseVisitor.cpp  ExplorerScriptBaseVisitor.h  ExplorerScriptLexer.cpp  ExplorerScriptLexer.h  ExplorerScriptLexer.interp  ExplorerScriptLexer.tokens  ExplorerScriptListener.cpp  ExplorerScriptListener.h  ExplorerScriptParser.cpp  ExplorerScriptParser.h  ExplorerScriptVisitor.cpp  ExplorerScriptVisitor.h  SsbCommon.g4  SsbScript.g4  SsbScriptBaseListener.cpp  SsbScriptBaseListener.h  SsbScriptBaseVisitor.cpp  SsbScriptBaseVisitor.h  SsbScriptLexer.cpp  SsbScriptLexer.h  SsbScriptLexer.tokens  SsbScriptListener.cpp  SsbScriptListener.h  SsbScriptParser.cpp  SsbScriptParser.h  SsbScriptVisitor.cpp  SsbScriptVisitor.h  __init__.pyi  parser_wrapper.cpp  parser_wrapper.h  parser_wrapper_exps.cpp  parser_wrapper_exps.h  parser_wrapper_ssbs.cpp  parser_wrapper_ssbs.h  pybind_explorerscript_parser.cpp
tests/compiler/: decimal_test.py  entity_context_test.py  jump_test.py  macros_imports_test.py  position_mark_arg_test.py  string_test.py  user_constants_macros_includes_test.py
tests/decompiler/: string_test.py
tests/fixtures/compiler/macros_imports_test/test_complex/: main.exps  other_file.exps
tests/fixtures/compiler/macros_imports_test/test_err_notfound/: main.exps
tests/fixtures/compiler/macros_imports_test/test_err_params/: main.exps
tests/fixtures/compiler/macros_imports_test/test_err_recursion1/: main.exps
tests/fixtures/compiler/macros_imports_test/test_err_recursion2/: main.exps
tests/fixtures/compiler/macros_imports_test/test_nested/: main.exps
tests/fixtures/compiler/macros_imports_test/test_nested_chain/: main.exps
tests/fixtures/compiler/macros_imports_test/test_other_file/: main.exps  other_file.exps
tests/fixtures/compiler/macros_imports_test/test_other_two/: main.exps  other_file.exps  (+1 more)
(+28 files in other folders)
