[build-system]
requires = [
    "setuptools",
    "scikit-build-core<=0.9.8",
    "pybind11>=2.10.0"
]
build-backend = "scikit_build_core.setuptools.build_meta"

[project]
name = "explorerscript"
version = "0.2.0"
authors = [
    { name = 'Marco "Capypara" Köpcke', email = "hello@capypara.de" },
    # see GitHub contributors list for additional people.
]
description = "ExplorerScript and SSBScript: Script languages for decompiled SSB (Pokémon Mystery Dungeon Explorers of Sky)"
readme = "README.rst"
requires-python = ">=3.9"
keywords = ["rom-hacking", "game-modding", "skytemple"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    'Programming Language :: Python',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
dependencies = [
    'igraph == 0.11.6',
    'typing_extensions >= 4.0; python_version < "3.10"'
]

[project.urls]
Homepage = "https://skytemple.org"
Announcements = "https://blog.skytemple.org"
Documentation = "https://wiki.skytemple.org"
Repository = "https://github.com/SkyTemple/ExplorerScript.git"
Issues = "https://github.com/SkyTemple/ExplorerScript/issues"
Discord = "https://discord.gg/skytemple"

[project.optional-dependencies]
pygments = ["pygments>=2.6.1"]

[project.entry-points."pygments.lexers"]
expslexer = "explorerscript.pygments.expslexer:ExplorerScriptLexer"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["explorerscript*"]
namespaces = false

[tool.ruff]
line-length = 120
extend-exclude = [
    "antlr4/*"
]

[tools.ruff.lint]
select = ["W", "E", "F", "ARG"]
